# The-All-Nearest-Smaller-Values-Problem

./: .gitignore  2d_linear_program.cpp  2d_linear_program.h  ANSV_nlogn_work.cpp  CMakeLists.txt  experiments.sh  helloword.cpp  lib.h  loopTest.cpp  main.cpp  parallelMinBinaryTree  parallelMinBinaryTree.cpp  parallelMinBinaryTreeArray.cpp  parallelMinBinaryTreeArray.h  parallelMinBinaryTreePointers.cpp  readme.md  test.cpp  test.h
ANSV/: ANSV_nlogn_work.cpp  berkmanOptimal.cpp  berkmanOptimal.h  naive_n2_work.cpp  naive_n2_work.h  nlogn_work_mine.cpp  nlogn_work_mine.h  nlogn_work_shun_and_zhao.cpp  nlogn_work_shun_and_zhao.h  par_naive_nlgn_work.cpp  par_naive_nlgn_work.h  seq_array_n_work.cpp  seq_array_n_work.h  seq_stack_n_work.cpp  seq_stack_n_work.h  shunZhaoOriginal.cpp  shunZhaoOriginal.h  testt.cpp  testt.h
Analysis/: parseExperiments.py
Cartesian_tree/: CT_from_ANSV_naive.cpp  CT_from_ANSV_naive.h  CT_from_ANSV_seq_IO.cpp  CT_from_ANSV_seq_IO.h
Experiments/: experiments.cpp  experiments.h
Experiments/Analysis/: blocksize.py  parseExperiments.py  runningTime.py  speedup.py
Experiments/Results/: PAPER_runningTime.txt  blockSize.txt  blockSizeOld.txt  blockSizePAPER.txt  blockSizePAPER_old.txt  runningTime.txt  runningTimeOld.txt  speedup.txt  speedupFinal.txt  speedupOld.txt
Glue/: CT.cpp  CT.h  Node.cpp  Node.h  VI.h  _aux.cpp  _aux.h  _constants.h  data.cpp  data.h
Misc/: loopTest.cpp  test.cpp  test.h
ParallelMinBinaryTrees/: parallelMinBinaryTreeArray.cpp  parallelMinBinaryTreeArray.h  parallelMinBinaryTreePointers.cpp
Testing/: TestANSV.cpp  TestANSV.h  TestCT.cpp  TestCT.h
